<resources>
  <string name="app_name">Cinema</string>
  <string name="action_settings">Hello</string>
  <string name="title_activity_login">Sign in</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_username">Username</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be at least 6 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="row">7</string>
  <string name="col">8</string>
  <string name="child">CHILD</string>
  <string name="senior">SENIOR</string>
  <string name="adult">ADULT</string>
  <string name="response_overdue">验证码已失效</string>
  <string name="toast_overdue">Id code is overdue</string>
  <string name="unknown_error">unknown error occurs, please contact admin</string>
  <string name="register_success">register successfully</string>
  <string name="idcode_sent">Id code has been sent to your email box</string>
</resources>
