<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/login"
        />

    <LinearLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_phone"
        android:visibility="gone"
        android:layout_marginTop="-120dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="24dp"
            android:hint="Phone"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />


        <EditText
            android:id="@+id/phone_id_code"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="Confirm"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
        <Button
            android:onClick="sendMessage"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="-90dp"
            android:background="@color/design_default_color_primary"
            android:text="send"
            android:textColor="#fff"
            android:textSize="30px"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="70dp"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnFilm"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/login"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button_selector"
        android:enabled="true"
        android:text="Login Later"
        android:textColor="#ffffff" />
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="140dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:onClick="login_P"
            android:layout_width="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/email_login"/>
        <ImageView
            android:onClick="login_E"
            android:layout_width="40dp"
            android:layout_marginLeft="35dp"
            android:layout_height="match_parent"
            android:background="@drawable/phone_login"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_account"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="105dp"
            android:text="No account?"
            android:textSize="17sp">

        </TextView>

        <TextView

            android:id="@+id/register"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/no_account"
            android:text="Register"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="17sp">

        </TextView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </LinearLayout>

</LinearLayout>
